--- a/house_price_prediction.ipynb
+++ b/house_price_prediction.ipynb
@@ -2,8 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ddfbc07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing necessary libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy.stats.mstats import winsorize\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "adcec270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading training and test data\n",
+    "\n",
+    "df_train = pd.read_csv(\"/home/nitesh/Desktop/house-price-prediction/train.csv\")\n",
+    "df_test = pd.read_csv(\"/home/nitesh/Desktop/house-price-prediction/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d91814f",
    "metadata": {},
    "outputs": [],
    "source": []
